static/css/theme.css
/* ... */
    .append {
        height: 1.8rem;
    }
    select.prepend {
        padding-top: 0.1rem;
        padding-bottom: 0.1rem;
    }
    input[type="search"].appended {
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }
    input[type="search"].prepended {
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
    }

    /*
    Progress Bar
    --------------------------------------*/
    .form-progression {
        margin-top: 3em;
    }
    ul.progress-steps {
        list-style: none;
        margin-bottom: 0;
        display: table;
        width: 100%;
        table-layout: fixed;
    }
    ul.progress-steps > li {
        display: table-cell;
        text-align: center;
        font-weight: bold;
    }
    ul.progress-steps > li.progress-inactive {
        color: #888;
    }
    .progress-container {
        width: 100%;
        height: 0.4em;
        border: 1px solid #134DA5;
        border-radius: 2px;
    }
    .progress-bar {
        height: 100%;
        background-color: #134DA5;
    }
    .form-progression {
        margin-bottom: 4em;
    }

    /*
    Forms
    --------------------------------------*/
    .date-long {
        width: 4em;
    }
    .date-short {
        width: 2.5em;
    }
    .name-long {
        width: 14rem;
    }
    .name-short {
        width: 12rem;
    }
    .address-long {
        width: 16em;
    }
    .address-short {
        width: 12em;
    }
    .postcode-short {
        width: 3.5em;
    }
    .postcode-long {
        width: 4.5em;
    }
    .price-long {
        width: 7em;
    }
    .price-short {
        width: 4em;
    }
    .credit-card-long {
        width: 12em;
    }
    .credit-card-short {
        width: 3.5em;
    }
    .title-long {
        width: 20em;
    }
    .category-long {
        width: 11em;
        margin-left: 0.4em;
    }
    .summary-small {
        width: 20em;
        height: 9.3em;
    }
    .summary-short {
        width: 32em;
        height: 7em;
    }
    .summary-long {
        width: 32em;
        height: 12em;
    }
    .description-long {
        width: 39.3em;
        height: 10em;
    }
    @keyframes highlight-border-red {
        0%   {border-color: #F00;}
        33%  {border-color: #A94442;}
        66%  {border-color: #F2DEDE;}
        100% {border-color: #CCC;}
    }
    input.error {
        animation: highlight-border-red 6s linear;
    }
    input.clarified {
        margin-bottom: 0;
    }
    #currency.prepend {
        padding-left: 0.4em;
        padding-right: 0.2em;
        border-radius: 0;
    }
    .upload-droparea {
        position: relative;
        overflow: hidden;
        padding: 2em 0.5em;
        border: 3px dashed rgba(0, 0, 0, 0.1);
        text-align: center;
        margin-bottom: 0.5em;
        width: 18em;
    }

    /*
    Registration
    --------------------------------------*/
    form#user-registration {
        margin-left: 4em;
    }
    form#user-registration input[type="submit"]{
        margin-top: 2em;
        margin-left: 6em;
    }

    /*
    Logging In
    --------------------------------------*/
    form#login-form {
        text-align: center;
    }
    form#login-form input[type="text"] {
        margin-top: 5em;
    }
    form#login-form input[type="submit"]{
        margin-top: 1em;
    }
    .error-message {
        display: inline-block;
        color: #A94442;
    }

    /*
    Header Tabs
    --------------------------------------*/
    ul#header-tabs {
        list-style: none;
        text-align: center;
    }
    ul#header-tabs > li {
        display: inline-block;
        text-align: center;
        padding-left: 2em;
        padding-right: 2em;
        width: 40%;
    }
    ul#header-tabs > li > h3 {
        font-size: 100%;
    }
    ul#header-tabs > li > h3 > a.inactive {
        color: #222;
    }
    section.featured {
        display: none;
    }
    section.featured:target,
    section.featured.active {
        display: inline-block;
    }
    ul#header-tabs.big-headers > li {
        margin-left: 2em;
        margin-right: 2em;
    }
    ul#header-tabs.big-headers > li > h3 {
        font-size: 140%;
    }

    /*
    Features & Dashboard
    --------------------------------------*/
    .bootable {
        display: block;
        margin-top: 2em;
        margin-bottom: 2em;
        border: 1px solid #888;
        border-radius: 8px;
        padding: 0;
        height: 14rem;
        color: #222;
    }
    a:focus > .bootable,
    a > .bootable:hover {
        border-color: #de2c3b;
        background-color: #f0f0f0;
        box-shadow: 0 0 2px #de2c3b;
    }
    .bootable .feature-author {
        font-size: 90%;
        color: rgba(0, 0, 0, 0.5);
        margin-bottom: 1.5em;
    }
    .bootable .feature-description {
        margin-bottom: 1em;
        min-height: 3.6rem;
    }
    .bootable .progress-container {
        border-color: #888;
        margin-bottom: 0.5em;
    }
    .bootable .progress-bar {
        background-color: #888;
    }
    a:focus > .bootable .progress-container,
    a > .bootable:hover .progress-container {
        border-color: #134DA5;
        box-shadow: 0 0 2px #134DA5;
        background-color: #fff;
    }
    a:focus > .bootable .progress-bar,
    a > .bootable:hover .progress-bar {
        background-color: #134DA5;
    }
    .bootable .feature-completion,
    .bootable .feature-category,
    .bootable .feature-backers,
    .bootable .feature-total {
        color: #888;
        display: inline-block;
        width: 24%;
    }
    .bootable div {
        margin-bottom: 0;
    }

    div.feature-image {
        display: inline-block;
        width: 30%;
        height: 100%;
        margin-right: 1em;
    }
    div.feature-image img {
        width: 18rem;
        height: 100%;
        border-top-left-radius: 8px;
        border-bottom-left-radius: 8px;
    }
/* ... */

